--- a/src/app/game-dashboard/game-dashboard.component.css
+++ b/src/app/game-dashboard/game-dashboard.component.css
@@ -1,49 +1,28 @@
 .body{
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
-#Users {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-#Users td, #Users th {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-
-#Users tr:nth-child(even){background-color: #f2f2f2;}
-
-#Users tr:hover {background-color: #ddd; cursor:pointer}
-
-#Users td {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #4CAF50;
-    color: black;
-}
 
 #UsersBody {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    font-size: 11px;
+    font-size: 12px;
     border-collapse: collapse;
     width: 100%;
 }
 
-#UsersBody td, #UsersBody th {
+#UsersBody tbody td, #UsersBody thead td {
     border: 1px solid #ddd;
     padding: 5px;
 }
 
-#UsersBody tr:nth-child(even){background-color: #f2f2f2;}
+#UsersBody tbody tr:nth-child(even){background-color: #f2f2f2;}
 
-#UsersBody tr:hover {background-color: #ddd;}
+#UsersBody tbody tr:hover {background-color: #ddd;}
 
-#UsersBody td {
+#UsersBody thead td {
     padding-top: 5px;
     padding-bottom: 5px;
     text-align: left;
+    background-color: #4CAF50;
     color: black;
 }
 
