--- a/src/app/game-dashboard/game-dashboard.component.html
+++ b/src/app/game-dashboard/game-dashboard.component.html
@@ -1,21 +1,27 @@
 <h3><b><u>Mini Game Analytics</u></b></h3>
 <div style="display: inline-block;padding:12px;">
-<div style="float: left">
-  Goto: <input type="number" name="currpage" [(ngModel)]="currentPage" style="width:35px">
-  <input type="button" value="Go" (click)="changePage()">
-  Page Limit : <select id="PageSize" [(ngModel)] = "pageSize" (change)="changePage()">
-    <option value="15">15</option>
-    <option value="30">30</option>
-    <option value="50">50</option>
-    <option value="100">100</option>
-  </select>
-</div>
-<div style="float: right;">
-    Showing {{startRecord}} - {{CurrPageRecords}} of {{totalRecords}}
-</div>
+  <div style="float: left">
+    Goto: <input type="number" name="currpage" [(ngModel)]="currentPage" style="width:35px">
+    <input type="button" value="Go" (click)="changePage()">
+    Page Limit : <select id="PageSize" [(ngModel)] = "pageSize" (change)="changePage()">
+      <option value="15">15</option>
+      <option value="30">30</option>
+      <option value="50">50</option>
+      <option value="100">100</option>
+    </select>
+  </div>
+  <div style="float: right; padding-left:150px">
+      Showing {{startRecord}} - {{CurrPageRecords}} of {{totalRecords}}
+  </div>
+  <div style="float: right; padding-left:150px">
+    <input type="radio" name="groupby" value = "name" (click)="setGroupBy('UserName')"> User Name
+    <input type="radio" name="groupby" value = "game"  (click)="setGroupBy('game')"> Game
+    <input type="button" value="Group By" (click)="this.LoadGroupByGridData()">
+    <input type="button" value ="Clear Group By" (click)="this.resetGridData()">
+  </div>
 </div>
 <div style="padding:12px;height:300px">
-  <table id = 'Users'>
+  <!-- <table id = 'Users'>
     <tr>
         <td  *ngFor="let constant of constants" 
             id={{constant.id}} 
@@ -33,5 +39,32 @@
       <td style="width:100px">{{gameData["end time"]  }}</td>
       <td style="width:80px">{{gameData.score}}</td>
     </tr>
+  </table> -->
+  <table id = 'UsersBody'>
+    <thead>
+        <td *ngFor="let column of this.Columns" (click)="sortData(column)">
+            <b>{{column | uppercase}}</b>
+        </td>
+    </thead>
+    <tbody *ngFor="let data of this.UserData">
+        <tr *ngIf="this.groupBySelected" >
+            <td [attr.colspan]="this.Columns.length">
+               <b> {{data[this.Columns[0]] | uppercase }} </b>
+            </td>
+        </tr>
+        <tr>
+            <td *ngFor="let column of this.Columns">
+                {{data[column]}}
+            </td>
+        </tr>
+        <tr *ngIf="this.groupBySelected" >
+            <td [attr.colspan]="this.Columns.length - 1" style="text-align:right">
+               <b> TotalCount </b>
+            </td>
+            <td>
+                <b> {{data[this.Columns[this.Columns.length-1]]}} </b>
+             </td>
+        </tr>
+    </tbody>
   </table>
 </div>
